fix: improved mobile UI (#14)
* settings menu scrollable, button aspect ratio

* icons resize

* timer buttons shrink

* flex direction of option btns

* color and settings scrollbar fix

--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -39,6 +39,9 @@
     .text-contrast {
         color: $clr-off-white;
     }
+    .fill-white {
+        fill: $clr-off-white;
+    }
     .fill-light {
         fill: $clr-blue-400;
     } 
@@ -82,10 +85,10 @@
     .text-contrast {
         color: $clr-off-white;
     }
-    .fill-light {
-        fill: $clr-cobalt-300;
+    .fill-white {
+        fill: $clr-skyblue;
     } 
-    .fill-accent {
+    .fill-accent, .fill-light {
         fill: $clr-cobalt-200;
     }
     .border-accent {
