--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,7 +16,7 @@ body {
 
 .layout-container {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 main {
@@ -56,6 +56,13 @@ button {
   justify-content: center;
 }
 
+@media (max-width: 500px) {
+.option-container {
+  flex-direction: column;
+  gap: 3rem;
+}
+}
+
 .option-button {
   font-size: 1.25rem;
   display: flex;
@@ -65,6 +72,7 @@ button {
 
 .timer-button {
   border-radius: 50%;
+  aspect-ratio: 1 / 1;
 }
 
 .timer-button:hover {
@@ -78,14 +86,14 @@ button {
 }
 
 .timer-button__play {
-  width: 8rem;
-  height: 8rem;
+  width: min(8rem, 30vw);
+  height: min(8rem, 30vw);
 }
 
 .timer-button__skip,
 .timer-button__reset {
-  width: 5rem;
-  height: 5rem;
+  width: min(5rem, 20vw);
+  height: min(5rem, 20vw);
 }
 
 .finish-cycle-stats {
@@ -95,6 +103,11 @@ button {
   flex-direction: column;
   gap: 2rem;
   font-size: 2rem;
+}
+
+.ui-icon {
+  width: min(2.5rem, 10vw);
+  height: min(2.5rem, 10vw);
 }
 
 .lightmode-icon-container {
@@ -122,6 +135,7 @@ button {
   transition: 0.33s ease-in-out right;
   padding: 6rem 2rem;
   z-index: 3;
+  overflow-y: auto;
 }
 
 @media (max-width: 1200px) {
